--- a/app/views/sync/messages/_newmessages.html.erb
+++ b/app/views/sync/messages/_newmessages.html.erb
@@ -8,7 +8,7 @@
       <%=message.content%><br>
     <% end %>
     <% if message.messagetype == 1 %>
-      <img src="<%=message.imagemessage.imagemessageupload.url%>" style="padding: 10px;"><br>
+      <img src="<%=message.imagemessage.imagemessageupload.thumb.url%>" style="padding: 10px;"><br>
     <% end %>
 
   </div>
