--- a/app/views/sync/messages/_newmessages.html.erb
+++ b/app/views/sync/messages/_newmessages.html.erb
@@ -1,15 +1,10 @@
-<div class="row">
+<div class="row messages">
   <div class="col-sm-1">
     <img src="<%= current_user.image.url %>" alt="User.find(message.sender_id).first_name" class="img-circle" onmouseover="bigImg(this)" onmouseout="normalImg(this)" onclick="alert('<%=message.content%>');" style="padding-top:2px; padding-left:2px" width="36px" height="36px">
   </div>
   <div class="col-sm-11">
     <strong><%=User.find(message.sender_id).first_name%></strong><br>
-    <% if message.messagetype == 0 %>
-      <%=message.content%><br>
-    <% end %>
-    <% if message.messagetype == 1 %>
-      <img src="<%=message.imagemessage.imagemessageupload.thumb.url%>" style="padding: 10px;"><br>
-    <% end %>
+    <%=message.content%><br>
 
   </div>
 </div>
