--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -212,8 +212,8 @@
 			<img class="img-rounded" alt="profile" src="/favicon.ico" width="100px" height="100px" style="float: left; margin-right: 12px; margin-top: 13px;">
 		</aside>
 		<h2> <%=@team.teamname%></h2>
-		<h4> <span class="glyphicon glyphicon-education" aria-hidden="true"></span> Team 11, Introduction to Electronic Circuits </h4>
-	  <h5 style="color: gray;"> <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Seoul National University </h5>
+		<h4> <span class="glyphicon glyphicon-education" aria-hidden="true"></span> </h4>
+	  <h5 style="color: gray;"> <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> </h5>
 	</div>
   <br>
   
