--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -219,14 +219,45 @@
   
   <!-- Nav tabs -->
 	<ul class="nav nav-tabs" role="tablist" style="padding-left: 70px;">
-		<li role="presentation" class="active"><a href="#tasklist" aria-controls="home" role="tab" data-toggle="tab">Tasklist</a></li>
+    <li role="presentation" class="active"><a href="#taskcalendar" aria-controls="home" role="tab" data-toggle="tab">Schedule</a></li>
+		<li role="presentation"><a href="#tasklist" aria-controls="home" role="tab" data-toggle="tab">Tasklist</a></li>
 		<li role="presentation"><a href="#taskindiv" aria-controls="home" role="tab" data-toggle="tab">Tasks</a></li>
 	</ul>
 	
 	<!-- Tab panes -->
 	<div class="tab-content">
-		<div role="tabpanel" class="tab-pane active" id="tasklist" style="background-color: #F3F3F3;">
+    <div role="tabpanel" class="tab-pane active" id="taskcalendar">
+      <div id="cal">
+        <div class="header">
+          <span class="left button" id="prev"> &lang; </span>
+          <span class="left hook"></span>
+          <span class="month-year" id="label"> April 2016 </span>
+          <span class="right hook"></span>
+          <span class="right button" id="next"> &rang; </span>
+        </div>
+        <table id="days">
+          <td>SUN</td><td>MON</td><td>TUE</td><td>WED</td><td>THU</td><td>FRI</td><td>SAT</td>
+        </table>
+        <div id="cal-frame">
+          <table class="curr">
+              <tbody>
+                  <tr><td class="nil"></td><td class="nil"></td><td class="nil"></td><td class="nil"></td><td class="nil"></td><td>1</td><td>2</td></tr> 
+                  <tr><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td class="today">8</td><td>9</td></tr> 
+                  <tr><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td></tr> 
+                  <tr><td>17</td><td>18</td><td>19</td><td>20</td><td>21</td><td>22</td><td>23</td></tr> 
+                  <tr><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td><td>29</td><td>30</td></tr> 
+              </tbody> 
+          </table>
+        </div>
+      </div>
+      <script>
+        var cal = CALENDAR();
 
+        cal.init();
+      </script>
+    </div>
+
+		<div role="tabpanel" class="tab-pane" id="tasklist" style="background-color: #F3F3F3;">
 				<!-- gantt head -->
 				<div class="bar2">
 					<% for j in 0..11 %>
@@ -252,6 +283,7 @@
 		    ganttfn();
   		</script>
 		</div>
+
 		<div role="tabpanel" class="tab-pane" id="taskindiv" style="background-color: #F3F3F3;">
 			<!-- gantt head -->
 			<div class="bar2">
