--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -65,31 +65,31 @@
       <div class="row" id="chat_top">
       	<div class="col-sm-6"><h2 style="color: #372727;">Chats</h2></div>
         <div class="col-sm-4"><h2> </h2></div>
-        <div class="col-sm-2"><button class="btn btn-new btn-circle btn-lg" type="button" data-toggle="tooltip" data-placement="bottom" title="채팅방 만들기" data-target="#addchatroom" aria-expanded="false" aria-controls="addchatroom" style="margin-top: 8px;"><i class="glyphicon glyphicon-plus"></i></button></div>
+        <div class="col-sm-2"><button class="btn btn-new btn-circle btn-lg" type="button" data-toggle="collapse" data-placement="bottom" data-target="#addchatroom2" aria-expanded="false" aria-controls="addchatroom" style="margin-top: 8px;"><span class="glyphicon glyphicon-plus"></span></button></div>
         
       </div>
-      <div class="row collapse" id="addchatroom">
-          <form action="/chat/create" method="post">
-          	<div id="chat_top">
-	            회의방 이름 <input type="text" name="title" required>
-	            <input type="hidden" name="team" value=<%=@team.id%>>
-            </div>
-            <br />
-            <% temp.each_with_index do |t,idx| %>
-        		  <% if t.id != current_user.id %>
-        		    <div class="row" id="chat_top">
-                  <div id="profile<%=idx%>" class="col-sm-12">
-            	  		<aside style="padding-left: 12px;">
-            		    	<img id="img_setting" class="img-circle" alt="profile" src="<%=t.image%>">
-            	    	</aside>
-          		    	<h5 style="color: black;"><%=t.first_name%></h5>
-          		    	<%= check_box_tag('user_ids[]', t.id) %>
-            	  	</div>
-                </div>
-      		  	<% end %>
-        		<% end %>
-            <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-            <div class="col-sm-2"><button type="submit" vlaue="Send" class="btn btn-new btn-circle btn-lg"><i class="glyphicon glyphicon-plus"></i></button></div>
+      <div class="row collapse" id="addchatroom2">
+        <form action="/chat/create" method="post">
+        	<div id="chat_top">
+            회의방 이름 <input type="text" name="title" required>
+            <input type="hidden" name="team" value=<%=@team.id%>>
+          </div>
+          <br />
+          <% temp.each_with_index do |t,idx| %>
+      		  <% if t.id != current_user.id %>
+      		    <div class="row" id="chat_top">
+                <div id="profile<%=idx%>" class="col-sm-12">
+          	  		<aside style="padding-left: 12px;">
+          		    	<img id="img_setting" class="img-circle" alt="profile" src="<%=t.image%>">
+          	    	</aside>
+        		    	<h5 style="color: black;"><%=t.first_name%></h5>
+        		    	<%= check_box_tag('user_ids[]', t.id) %>
+          	  	</div>
+              </div>
+    		  	<% end %>
+      		<% end %>
+          <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+          <div class="col-sm-2"><button type="submit" vlaue="Send" class="btn btn-new btn-circle btn-lg"><i class="glyphicon glyphicon-plus"></i></button></div>
         </form>
       </div>
       <div class="row" id="chat_top">
