image upload bug fix but new bug

--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -22,7 +22,7 @@
         <div class="col-sm-3"></div>
         <form action="/team/addmember" method="get">
           <input type="hidden" name="team" value="<%=@team.id%>"/>
-          <div class="col-sm-2"><button type="submit" class="btn btn-new btn-circle btn-lg" data-toggle="collapse" data-placement="bottom" title="팀원 추가" style="margin-top: 8px;"><i class="glyphicon glyphicon-plus"></i></button></div>
+          <div class="col-sm-2"><button type="submit" class="btn btn-new btn-circle btn-lg" data-toggle="tooltip" data-placement="bottom" title="팀원 추가" style="margin-top: 8px;"><i class="glyphicon glyphicon-plus"></i></button></div>
         </form>
       </div>
       <!-- My Profile -->
