--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -61,13 +61,43 @@
 
       <input id="imageupload" type="file" name="image_file" style="visibility:hidden;position:absolute;top:0;left:0;">
     </form>
-    
-                
-    <script>
-      $('#imageupload').change(function() {
-        $('#imagefileupload').submit();
+    <button type="hidden" style="visibility:hidden;position:absolute;top:0;left:0;" class="btn btn-primary btn-lg" id="imshow" data-toggle="modal" data-target="#myModal"></button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img id="blah" src="#" alt="your image" style="padding: 10px; max-width: 100%; height: auto;"/>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">취소</button>
+            <button type="button" onclick="$('#imagefileupload').submit();" class="btn btn-primary">이미지 올리기</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript">
+      $(function(){
+        $("#imageupload").on('change',function(){
+          document.getElementById('imshow').click();
+          readURL(this);
+        });
       });
+
+      function readURL(input){
+        if(input.files && input.files[0]){
+          var reader = new FileReader();
+
+          reader.onload = function(e){
+            $('#blah').attr('src',e.target.result);
+          }
+
+          reader.readAsDataURL(input.files[0]);
+        }
+      }
     </script>
+    
 
 
     <script>
