--- a/app/views/sync/messages/_newmessages.html.erb
+++ b/app/views/sync/messages/_newmessages.html.erb
@@ -10,6 +10,9 @@
     <% if message.messagetype == 1 %>
       <a href="<%=message.imagemessage.imagemessageupload.url%>"><img src="<%=message.imagemessage.imagemessageupload.url%>" style="padding: 10px; max-width: 70%; height: auto;"></a><br>
     <% end %>
+    <% if message.messagetype == 2 %>
+      THIS CONTENT IS FILE!<br>
+    <% end %>
 
   </div>
 </div>
