--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -84,15 +84,23 @@
             <img id="blah" src="#" alt="your image" style="padding: 10px; max-width: 100%; height: auto;"/>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">취소</button>
-            <button type="button" onclick="$('#imagefileupload').submit();" class="btn btn-primary">이미지 올리기</button>
+            <button id="closemodal" type="button" class="btn btn-default" data-dismiss="modal">취소</button>
+            <button id="imagesubmit" type="button" onclick="$('#imagefileupload').submit();$('#closemodal').click(); this.disabled=true;" class="btn btn-primary">이미지 올리기</button>
           </div>
         </div>
       </div>
     </div>
     <script type="text/javascript">
+      $(document).ready(function(){
+        $("#imageupload").on('click',function(){
+          this.value=null;
+        });
+      })
+
+
       $(function(){
         $("#imageupload").on('change',function(){
+          $("#imagesubmit").prop('disabled', false);
           document.getElementById('imshow').click();
           readURL(this);
         });
