--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,87 +19,47 @@
   <meta name="google-signin-client_id" content="462449088434-dqsv26kcove38hjrsbjrhe1gkm3f4d1f.apps.googleusercontent.com">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-</head>
-
-<body>
-  <!--
-  <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-  <script>
-    function onSignIn(googleUser) {
-      // Useful data for your client-side scripts:
-      var profile = googleUser.getBasicProfile();
-      console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-      console.log('Full Name: ' + profile.getName());
-      console.log('Given Name: ' + profile.getGivenName());
-      console.log('Family Name: ' + profile.getFamilyName());
-      console.log("Image URL: " + profile.getImageUrl());
-      console.log("Email: " + profile.getEmail());
-
-      // The ID token you need to pass to your backend:
-      var id_token = googleUser.getAuthResponse().id_token;
-      console.log("ID Token: " + id_token);
-    };
-  </script>
-  <a href="#" onclick="signOut();">Sign out</a>
-  <script>
-    function signOut() {
-      var auth2 = gapi.auth2.getAuthInstance();
-      auth2.signOut().then(function () {
-        console.log('User signed out.');
-      });
+  <style>
+    @media (max-width: 1090px) {
+      .navbar-header {
+          float: none;
+      }
+      .navbar-toggle {
+          display: block;
+      }
+      .navbar-collapse {
+          border-top: 1px solid transparent;
+          box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+      }
+      .navbar-collapse.collapse {
+          display: none!important;
+      }
+      .navbar-nav {
+          float: none!important;
+          margin: 7.5px -15px;
+      }
+      .navbar-nav>li {
+          float: none;
+      }
+      .navbar-nav>li>a {
+          padding-top: 10px;
+          padding-bottom: 10px;
+      }
+      .navbar-text {
+          float: none;
+          margin: 15px 0;
+      }
+      /* since 3.1.0 */
+      .navbar-collapse.collapse.in { 
+          display: block!important;
+      }
+      .collapsing {
+          overflow: hidden!important;
+      }
     }
-  </script>
+  </style>
 
-  <div id="naver_id_login"></div>
-  <script type="text/javascript">
-  	var naver_id_login = new naver_id_login("M0R6aB8v_c9bWdQlNM9D", "https://grouper1-hyunjunian.c9users.io/");
-  	naver_id_login.setButton("white", 2,40);
-  	naver_id_login.setDomain(".service.com");
-  	naver_id_login.setState("abcdefghijkmnopqrst");
-  	naver_id_login.setPopup();
-  	naver_id_login.init_naver_id_login();
-
-    naver_id_login.get_naver_userprofile();
-    email = naver_id_login.getProfileData('email');
-    name = naver_id_login.getProfileData('name');
-    age = naver_id_login.getProfileData('age');
-  </script>
-
-	<div id="kakao-profile"></div>
-  <a id="kakao-login-btn"></a>
-  <input type="button" onclick="Kakao.Auth.logout();" value="로그아웃" />
-  <input type="button" onclick="getKakaotalkUserProfile();" value="프로필" />
-  <script type='text/javascript'>
-    //<![CDATA[
-      // 사용할 앱의 JavaScript 키를 설정해 주세요.
-      Kakao.init('9565439f91483946dbb7c590c98360b7');
-      // 카카오 로그인 버튼을 생성합니다.
-      Kakao.Auth.createLoginButton({
-        container: '#kakao-login-btn',
-        success: function(authObj) {
-          alert(JSON.stringify(authObj));
-        },
-        fail: function(err) {
-           alert(JSON.stringify(err));
-        }
-      });
-      function getKakaotalkUserProfile(){
-				Kakao.API.request({
-					url: '/v1/user/me',
-					success: function(res) {
-						$("#kakao-profile").append(res.properties.nickname);
-						$("#kakao-profile").append($("<img/>",{"src":res.properties.profile_image,"alt":res.properties.nickname+"님의 프로필 사진"}));
-					},
-					fail: function(error) {
-						console.log(error);
-					}
-				});
-			}
-    //]]>
-  </script>
-  -->
-
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default navbar-fixed-top" style="width:100%;">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -184,6 +144,87 @@
       <% end %>
     </div><!-- /.container-fluid -->
   </nav>
+</head>
+
+<body>
+  <!--
+  <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+  <script>
+    function onSignIn(googleUser) {
+      // Useful data for your client-side scripts:
+      var profile = googleUser.getBasicProfile();
+      console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+      console.log('Full Name: ' + profile.getName());
+      console.log('Given Name: ' + profile.getGivenName());
+      console.log('Family Name: ' + profile.getFamilyName());
+      console.log("Image URL: " + profile.getImageUrl());
+      console.log("Email: " + profile.getEmail());
+
+      // The ID token you need to pass to your backend:
+      var id_token = googleUser.getAuthResponse().id_token;
+      console.log("ID Token: " + id_token);
+    };
+  </script>
+  <a href="#" onclick="signOut();">Sign out</a>
+  <script>
+    function signOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      auth2.signOut().then(function () {
+        console.log('User signed out.');
+      });
+    }
+  </script>
+
+  <div id="naver_id_login"></div>
+  <script type="text/javascript">
+  	var naver_id_login = new naver_id_login("M0R6aB8v_c9bWdQlNM9D", "https://grouper1-hyunjunian.c9users.io/");
+  	naver_id_login.setButton("white", 2,40);
+  	naver_id_login.setDomain(".service.com");
+  	naver_id_login.setState("abcdefghijkmnopqrst");
+  	naver_id_login.setPopup();
+  	naver_id_login.init_naver_id_login();
+
+    naver_id_login.get_naver_userprofile();
+    email = naver_id_login.getProfileData('email');
+    name = naver_id_login.getProfileData('name');
+    age = naver_id_login.getProfileData('age');
+  </script>
+
+	<div id="kakao-profile"></div>
+  <a id="kakao-login-btn"></a>
+  <input type="button" onclick="Kakao.Auth.logout();" value="로그아웃" />
+  <input type="button" onclick="getKakaotalkUserProfile();" value="프로필" />
+  <script type='text/javascript'>
+    //<![CDATA[
+      // 사용할 앱의 JavaScript 키를 설정해 주세요.
+      Kakao.init('9565439f91483946dbb7c590c98360b7');
+      // 카카오 로그인 버튼을 생성합니다.
+      Kakao.Auth.createLoginButton({
+        container: '#kakao-login-btn',
+        success: function(authObj) {
+          alert(JSON.stringify(authObj));
+        },
+        fail: function(err) {
+           alert(JSON.stringify(err));
+        }
+      });
+      function getKakaotalkUserProfile(){
+				Kakao.API.request({
+					url: '/v1/user/me',
+					success: function(res) {
+						$("#kakao-profile").append(res.properties.nickname);
+						$("#kakao-profile").append($("<img/>",{"src":res.properties.profile_image,"alt":res.properties.nickname+"님의 프로필 사진"}));
+					},
+					fail: function(error) {
+						console.log(error);
+					}
+				});
+			}
+    //]]>
+  </script>
+  -->
+
+  
 
   <%= yield %>
 
