--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -10,6 +10,11 @@
   </div>
 </section>
 
+
+
+
+
+
 <!-- Memberlist & Chatlist Sidebar -->
 <section class="sidebar" id="sidebar">
   <div class="tab-content">
@@ -39,7 +44,7 @@
 		    	<h5 style="color: black; font-size: 18px; padding-top: 15px;"><%=current_user.first_name%></h5>
   	  	</div>
       </div>
-      
+
       <!-- Others Profile -->
       <div class="row" id="chat_top">
         <div class="col-sm-12">
@@ -59,16 +64,16 @@
 		  	<% end %>
   		<% end %>
     </div>
-    
+
     <!-- Tab2: List of chat rooms -->
     <div class="tab-pane" id="tab2">
       <div class="row" id="chat_top">
       	<div class="col-sm-6"><h2 style="color: #372727;">Chats</h2></div>
         <div class="col-sm-4"><h2> </h2></div>
-        
+
         <div class="col-sm-2"><button class="btn btn-new btn-circle btn-lg" type="button" data-toggle="collapse" data-placement="bottom" data-target="#addchatroom2" aria-expanded="false" aria-controls="addchatroom" style="margin-top: 8px;"><span class="glyphicon glyphicon-plus"></span></button></div>
 
-        
+
       </div>
       <div class="row collapse" id="addchatroom2">
         <form action="/chat/create" method="post">
@@ -99,7 +104,7 @@
           <h5 style="color: #52D5CC">회의방</h3>
         </div>
       </div>
-      
+
       <% if @chat %>
         <% @chat.each do |chat| %>
           <div class="row" id="chat_top">
@@ -109,11 +114,18 @@
                     <input class="btn btn-default" type="submit" value="<%=chat.title%>">
               </div>
             </form>
+            <form action="/chat/deletemember" method="post">
+              <input type="hidden" name="chat" value="<%=chat.id%>">
+              <input type="hidden" name="team" value="<%=@team.id%>">
+              <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+
+              <input type="submit">
+            </form>
           </div>
         <% end %>
       <% end %>
     </div>
-    
+
     <!-- Tab3: Giving Tasks -->
     <div class="tab-pane" id="tab3">
       <div class="row" id="chat_top">
@@ -121,7 +133,7 @@
         <div class="col-sm-1"><h2> </h2></div>
         <div class="col-sm-3"></div>
       </div>
-      
+
       <form action="/task/create" method="post">
         <div class="row" id="chat_top2">
           <div class="form-group">
@@ -131,7 +143,7 @@
   					</div>
   				</div>
         </div>
-        
+
         <div class="row" id="chat_top">
           <div class='col-sm-10'>
             <label for="datetimepicker1"><span class="glyphicon glyphicon-calendar" aria-hidden="true" style="padding-top: 2px; margin-right: 2px;"></span>Duedate</label>
@@ -157,7 +169,7 @@
             });
           </script>
         </div>
-        
+
         <!-- My Profile -->
         <div class="row" id="chat_top">
           <div class="col-sm-12">
@@ -175,7 +187,7 @@
     	      <%= check_box_tag('user_ids[]', current_user.id) %><br />
     	    </div>
         </div>
-        
+
         <!-- Others Profile -->
         <div class="row" id="chat_top">
           <div class="col-sm-12">
@@ -218,14 +230,14 @@
 	  <h5 style="color: gray;"> <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> </h5>
 	</div>
   <br>
-  
+
   <!-- Nav tabs -->
 	<ul class="nav nav-tabs" role="tablist" style="padding-left: 70px;">
     <li role="presentation" class="active"><a href="#taskcalendar" aria-controls="home" role="tab" data-toggle="tab">Schedule</a></li>
 		<li role="presentation"><a href="#tasklist" aria-controls="home" role="tab" data-toggle="tab">Tasklist</a></li>
 		<li role="presentation"><a href="#taskindiv" aria-controls="home" role="tab" data-toggle="tab">Tasks</a></li>
 	</ul>
-	
+
 	<!-- Tab panes -->
 	<div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="taskcalendar">
@@ -243,12 +255,12 @@
         <div id="cal-frame">
           <table class="curr">
               <tbody>
-                  <tr><td class="nil"></td><td class="nil"></td><td class="nil"></td><td class="nil"></td><td class="nil"></td><td>1</td><td>2</td></tr> 
-                  <tr><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td class="today">8</td><td>9</td></tr> 
-                  <tr><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td></tr> 
-                  <tr><td>17</td><td>18</td><td>19</td><td>20</td><td>21</td><td>22</td><td>23</td></tr> 
-                  <tr><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td><td>29</td><td>30</td></tr> 
-              </tbody> 
+                  <tr><td class="nil"></td><td class="nil"></td><td class="nil"></td><td class="nil"></td><td class="nil"></td><td>1</td><td>2</td></tr>
+                  <tr><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td class="today">8</td><td>9</td></tr>
+                  <tr><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td></tr>
+                  <tr><td>17</td><td>18</td><td>19</td><td>20</td><td>21</td><td>22</td><td>23</td></tr>
+                  <tr><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td><td>29</td><td>30</td></tr>
+              </tbody>
           </table>
         </div>
       </div>
@@ -335,7 +347,7 @@
 				  <% end %>
 				<% end %>
 			<% end %>
-			
+
 			<script>
 			    function ganttfn(){
 			        (function(document) {
@@ -356,5 +368,5 @@
 		  	</script>
 		</div>
 	</div>
-	
+
 </section>
