알아볼 수 있게 바꿈

--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -119,7 +119,7 @@
               <input type="hidden" name="team" value="<%=@team.id%>">
               <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
 
-              <input type="submit">
+              <input type="submit" value="채팅방 나가기">
             </form>
           </div>
         <% end %>
