--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -24,7 +24,7 @@ background-size: cover;
             <form action="/team/deletemember" method="post">
               <input type="hidden" name="team" value="<%=team.id%>">
               <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-              <input type="submit">
+              <input type="submit" value ="팀 나가기">
             </form>
 
           <% end %>
