--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -69,7 +69,6 @@
       <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
 
       <input id="fileupload" type="file" name="file_file" style="visibility:hidden;position:absolute;top:0;left:0;">
-      <input type="submit">
     </form>
 
     <button type="hidden" style="visibility:hidden;position:absolute;top:0;left:0;" class="btn btn-primary btn-lg" id="imshow" data-toggle="modal" data-target="#myModal"></button>
@@ -89,7 +88,21 @@
         </div>
       </div>
     </div>
+    
+    
     <script type="text/javascript">
+
+      $(document).ready(function(){
+        $("#fileupload").on('click',function(){
+          this.value=null;
+        });
+      })
+      $(function(){
+        $("#fileupload").on('change',function(){
+          $("#filefileupload").submit();
+        });
+      });
+
 
       $(document).ready(function(){
         $("#imageupload").on('click',function(){
