--- a/app/views/message/imageup.js.erb
+++ b/app/views/message/imageup.js.erb
@@ -1,3 +1,15 @@
+
+$(document).ready(function(){
+  $("#fileupload").on('click',function(){
+    this.value=null;
+  });
+})
+$(function(){
+  $("#fileupload").on('change',function(){
+    $("#filefileupload").submit();
+  });
+});
+
 $("#imageupload").on('click',function(){
   this.value=null;
 });
