--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -243,7 +243,7 @@ UserVoice.push(['set', {
 // Identify the user and pass traits
 // To enable, replace sample data with actual user traits and uncomment the line
 UserVoice.push(['identify', {
-  //email:      'john.doe@example.com', // User’s email address
+  email:      '<%=current_user.email%>', // User’s email address
   //name:       'John Doe', // User’s real name
   //created_at: 1364406966, // Unix timestamp for the date the user signed up
   //id:         123, // Optional: Unique id of the user (if set, this should not change)
