--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -178,8 +178,8 @@
       </div><!-- /.navbar-collapse -->
       <% else %>
         <ul class="nav navbar-nav navbar-right">
-          <li><a data-toggle="tooltip" data-placement="bottom" title="팀을 효과적으로 운영할 수 있도록 도와주는 서비스">그루퍼란?</a></li>
-          <li><a href="https://open.kakao.com/o/sbpof8i">그루퍼에 연락하기</a></li>
+          <li><a data-toggle="tooltip" data-placement="bottom" title="팀을 효과적으로 운영할 수 있도록 도와주는 서비스입니다">그루퍼란?</a></li>
+          <li><a data-toggle="tooltip" data-placement="bottom" title="오른쪽 아래 물음표 말풍선을 이용하세요">그루퍼에 연락하기</a></li>
         </ul>
       <% end %>
     </div><!-- /.container-fluid -->
