--- a/app/views/sync/messages/_newmessages.html.erb
+++ b/app/views/sync/messages/_newmessages.html.erb
@@ -3,18 +3,24 @@
     <img src="<%= current_user.image.url %>" alt="User.find(message.sender_id).first_name" class="img-circle" onmouseover="bigImg(this)" onmouseout="normalImg(this)" onclick="alert('<%=message.content%>');" style="padding-top:2px; padding-left:2px" width="36px" height="36px">
   </div>
   <div class="col-sm-11">
-    <strong><%=User.find(message.sender_id).first_name%></strong><br>
-    <% if message.messagetype == 0 %>
-      <%=message.content%><br>
-    <% end %>
-    <% if message.messagetype == 1 %>
+    <div id="message<%=message.id%>">
 
-        <a href="<%=message.imagemessage.imagemessageupload.url%>"><img class="imagemessage" src="<%=message.imagemessage.imagemessageupload.url%>" style="padding: 10px; max-width: 70%; height: auto;"></a><br>
+      <strong><%=User.find(message.sender_id).first_name%></strong><br>
 
-    <% end %>
-    <% if message.messagetype == 2 %>
-      THIS CONTENT IS FILE!<br>
-    <% end %>
+      <% if message.messagetype == 0 %>
+        <%=message.content%><br>
+      <% end %>
+      <% if message.messagetype == 1 %>
+
+          <a href="<%=message.imagemessage.imagemessageupload.url%>"><img class="imagemessage" src="<%=message.imagemessage.imagemessageupload.url%>" style="padding: 10px; max-width: 70%; height: auto;"></a><br>
+
+      <% end %>
+      <% if message.messagetype == 2 %>
+        THIS CONTENT IS FILE!<br>
+      <% end %>
+
+
+    </div>
 
   </div>
 </div>
