regmail for grouperbeta.com

--- a/app/views/notice_mailer/regmail.html.erb
+++ b/app/views/notice_mailer/regmail.html.erb
@@ -2,4 +2,4 @@
 <p>아래 링크를 클릭하시면 가입이 완료됩니다!!</p>
 
 <strong>만약 현재 그루퍼에 로그인 되어있다면 로그아웃 해주세요.</strong>
-<a href="https://grouper2-hyunjunian-1.c9users.io/users/sign_up?email=<%=@email%>&auth=<%=@auth%>">가입 완료하기</a>
+<a href="grouperbeta.com/users/sign_up?email=<%=@email%>&auth=<%=@auth%>">가입 완료하기</a>
