--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -118,7 +118,6 @@
       </div>
       <% if current_user%>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <% if !current_page?(:controller => '/team', :action => 'index') and !current_page?(:controller => '/team', :action => 'newteam') and !current_page?(:controller => '/team', :action => 'profile') %>
         <ul class="nav navbar-nav">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">팀 바꾸기 <span class="caret"></span></a>
@@ -132,34 +131,28 @@
               <li><a href="/team/newteam">새로운 팀 만들기</a></li>
             </ul>
           </li>
+          <% if !current_page?(:controller => '/team', :action => 'index') and !current_page?(:controller => '/team', :action => 'newteam') and !current_page?(:controller => '/team', :action => 'profile') %>
           
-          <% if current_page?(:controller => '/message', :action => 'show')%>
-          <li class="active"><a href="#">화이트보드<span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span></a></li>
-          <% else %>
-          <li><a href="#">화이트보드<span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span></a></li>
+            
+            <% if current_page?(:controller => '/message', :action => 'show')%>
+            <li class="active"><a href="#">화이트보드<span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span></a></li>
+            <% else %>
+            <li><a href="#">화이트보드<span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span></a></li>
+            <% end %>
+            <% if current_page?(:controller => '/resumes')%>
+            <li class="active"><a href="">클라우드<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span></a></li>
+            <% else %>
+            <% @str = "클라우드<span class='glyphicon glyphicon-cloud-download' aria-hidden='true'></span>" %>
+            <li><%= link_to @str.html_safe, action: "index", controller: "resumes", team: @team.id %></li>
+            <% end %>
+            <% if current_page?(:controller => '/task', :action => 'show')%>
+            <li class="active"><a href="">워크맵<span class="glyphicon glyphicon-stats" aria-hidden="true"></span></a></li>
+            <% else %>
+            <% @str = "워크맵<span class='glyphicon glyphicon-stats' aria-hidden='true'></span>" %>
+            <li><%= link_to @str.html_safe, action: "show", controller: "task", team: @team %></li>
+            <% end %>
           <% end %>
-          <% if current_page?(:controller => '/resumes')%>
-          <li class="active"><a href="">클라우드<span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span></a></li>
-          <% else %>
-          <% @str = "클라우드<span class='glyphicon glyphicon-cloud-download' aria-hidden='true'></span>" %>
-          <li><%= link_to @str.html_safe, action: "index", controller: "resumes", team: @team.id %></li>
-          <% end %>
-          <% if current_page?(:controller => '/task', :action => 'show')%>
-          <li class="active"><a href="">워크맵<span class="glyphicon glyphicon-stats" aria-hidden="true"></span></a></li>
-          <% else %>
-          <% @str = "워크맵<span class='glyphicon glyphicon-stats' aria-hidden='true'></span>" %>
-          <li><%= link_to @str.html_safe, action: "show", controller: "task", team: @team %></li>
-          <% end %>
-          
         </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="찾고 싶은 걸 입력하세요">
-          </div>
-          <button type="submit" class="btn btn-default">검색</button>
-        </form>
-        <% end %>
-        <a class="nav navbar-text navbar-left" href="https://open.kakao.com/o/sbpof8i">그루퍼에 의견 보내기!</a>
         <ul class="nav navbar-nav navbar-right">
           <a class="navbar-brand" href="/team/profile">
             <img class="img-circle" alt="profile" src="<%= current_user.image.url %>" width="20px" height="20px">
@@ -169,7 +162,7 @@
             <ul class="dropdown-menu">
               <li><a href="/team/profile">프로필 바꾸기</a></li>
               <li><a href="#">설정</a></li>
-              <li><a href="https://open.kakao.com/o/sbpof8i">그루퍼에 의견 보내기!</a></li>
+              <li><a href="https://open.kakao.com/o/sbpof8i">그루퍼와 톡하기!</a></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to "로그아웃", destroy_user_session_path, :method => :delete %></li>
             </ul>
