--- a/app/assets/stylesheets/html_erb_chat.css
+++ b/app/assets/stylesheets/html_erb_chat.css
@@ -1,3 +1,4 @@
+
 .sidetab{
     left: 0;
     float: left;
@@ -11,27 +12,50 @@
     border: 1px solid #4CCFC5;
     border-right: 1px solid #4CCFC5;
 }
-.sidebar{
-    height: 100%;
-    width: 32%;
-    max-width: 425px;
-    position: fixed;
-    top: 52px;
-    left: 75px;
-    background-color: #52D5CC;
-    overflow-x: hidden;
-    border: 1px solid #4CCFC5;
+
+    .homebody_chat {
+      top: 52px;
+      /*left: 50px;*/
+      position: relative;
+      width: 607px;
+      z-index: 1;
+      padding:15px;
+    }
+    .sidebar{
+      height: 100%;
+      width: 425px;
+      position: relative;
+      top: 52px;
+      left: 75px;
+      background-color: #52D5CC;
+      overflow-x: hidden;
+      border: 1px solid #4CCFC5;
+    }
+
+@media screen and (min-width: 990px) {
+    .homebody_chat {
+      top: 52px;
+      /*left: 50px;*/
+      float: right;
+      position: relative;
+      width: 61%;
+      min-width: 607px;
+      z-index: 1;
+      padding:15px;
+    }
+    .sidebar{
+      height: 100%;
+      width: 32%;
+      max-width: 425px;
+      position: fixed;
+      top: 52px;
+      left: 75px;
+      background-color: #52D5CC;
+      overflow-x: hidden;
+      border: 1px solid #4CCFC5;
+    }
 }
-.homebody_chat{
-  top: 52px;
-  /*left: 50px;*/
-  float: right;
-  position: relative;
-	width: 61%;
-  min-width: 607px;
-  z-index: 1;
-  padding:15px;
-}
+
 #chat-icon-box{
 	position: absolute;
 	top: 50%;
