--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,7 +95,6 @@
 					}
 				});
 			}
-    //]]>
   </script>
   -->
 
@@ -131,7 +130,7 @@
               <li><a href="/team/newteam">새로운 팀 만들기</a></li>
             </ul>
           </li>
-          <% if !current_page?(:controller => '/team', :action => 'index') and !current_page?(:controller => '/team', :action => 'newteam') and !current_page?(:controller => '/team', :action => 'profile') %>
+          <% if !current_page?(:controller => '/team', :action => 'index') and !current_page?(:controller => '/team', :action => 'newteam') and !current_page?(:controller => '/team', :action => 'profile') and !current_page?(:controller => '/team', :action => 'noteam') and  !current_page?(:controller => '/team', :action => 'search') %>
           
             
             <% if current_page?(:controller => '/message', :action => 'show')%>
@@ -150,6 +149,28 @@
             <% else %>
             <% @str = "워크맵<span class='glyphicon glyphicon-stats' aria-hidden='true'></span>" %>
             <li><%= link_to @str.html_safe, action: "show", controller: "task", team: @team %></li>
+            <% end %>
+            <% if current_page?(:controller => '/chat', :action => 'show')%>
+              <li>
+              <form id="exit" action="/team/deletemember" method="post">
+                <input type="hidden" name="team" value="<%=@team.id%>">
+                <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+                
+              </form>
+              <a class="btn btn-link" data-toggle="modal" data-target="#exitmodal">팀 나가기</a>
+              
+              <div id="exitmodal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-sm">
+                  <div class="modal-content" style="text-align: center;">
+                    <br>
+                    <h4>정말 <%=@team.teamname%>에서 나가겠습니까?</h4>
+                    <p>다시 들어오려면 팀원의 초대가 있어야 합니다</p>
+                    <button class="btn btn-danger" onclick="$('#exit').submit();">네, 나가겠습니다</button>
+                    <br><br>
+                  </div>
+                </div>
+              </div>
+              </li>
             <% end %>
           <% end %>
         </ul>
@@ -175,8 +196,11 @@
           <li><a data-toggle="tooltip" data-placement="bottom" title="오른쪽 아래 물음표 말풍선을 이용하세요">그루퍼에 연락하기</a></li>
         </ul>
       <% end %>
-    </div><!-- /.container-fluid -->
+    </div>
   </nav>
+  
+
+
 
   <%= yield %>
 
