--- a/app/views/team/noteam.html.erb
+++ b/app/views/team/noteam.html.erb
@@ -1,4 +1,3 @@
-
 <style>
 body
 {
@@ -15,8 +14,9 @@ background-size: cover;
     <div class="col-sm-4 col-sm-offset-4">
       <div class="panel panel-default">
         <div class="panel-body">
-          <h3>팀방 들어가기</h3>
-          <p>왼쪽 상단메뉴에서 팀 바꾸기를 눌러주세요!</p>
+          <h3>아직 가입된 팀이 없군요!</h3>
+          <a class="btn btn-link" href="/team/newteam">새로운 팀 만들기</a>
+          <a class="btn btn-link" href="/team/search">기존 팀에 초대되기</a>
         </div>
       </div>
     </div>
