--- a/app/views/team/search.html.erb
+++ b/app/views/team/search.html.erb
@@ -1,4 +1,3 @@
-
 <style>
 body
 {
@@ -15,8 +14,8 @@ background-size: cover;
     <div class="col-sm-4 col-sm-offset-4">
       <div class="panel panel-default">
         <div class="panel-body">
-          <h3>팀방 들어가기</h3>
-          <p>왼쪽 상단메뉴에서 팀 바꾸기를 눌러주세요!</p>
+          <h3>기존의 팀에 초대되려면 기존 팀 멤버로부터 초대를 받아야 합니다.</h3>
+          <a class="btn btn-link" href="/">돌아가기</a>
         </div>
       </div>
     </div>
