--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -1,6 +1,6 @@
 
 <!-- Chat Sidetab -->
-<section class="sidetab">
+<div class="sidetab">
   <div id="chat-icon-box" class="tabbable tabs-left">
     <center><span id="chat-icon-member" href="#tab1" data-toggle="tab" role="button" class="glyphicon glyphicon-user" aria-hidden="true" style="color: white;"></span></center>
     <br>
@@ -8,10 +8,10 @@
     <br>
     <center><span id="chat-icon-chatlist" href="#tab3" data-toggle="tab" role="button" class="glyphicon glyphicon-hand-right" aria-hidden="true" style="color: white;"></span></center>
   </div>
-</section>
+</div>
 
 <!-- Memberlist & Chatlist Sidebar -->
-<section class="home sidebar" id="sidebar">
+<div class="home sidebar" id="sidebar">
   <div class="tab-content">
     <div class="tab-pane" id="tab1">
       <% temp = [] %>
@@ -205,10 +205,10 @@
     </div>
     <!-- end of Tab3 -->
   </div>
-</section>
+</div>
 
 <!-- Homebody for Notification or Something others -->
-<section class="home homebody_chat">
+<div class="home homebody_chat">
   <div class="row">
 		<aside style="padding-left: 12px; padding-top: 12px;">
 			<img class="img-rounded" alt="profile" src="/favicon.ico" width="100px" height="100px" style="float: left; margin-right: 12px; margin-top: 13px;">
@@ -357,4 +357,4 @@
 		</div>
 	</div>
 	
-</section>
+</div>
