--- a/app/assets/stylesheets/html_erb_chat.css
+++ b/app/assets/stylesheets/html_erb_chat.css
@@ -1,5 +1,35 @@
 
 .sidetab{
+    float: left;
+    width: 75px;
+    height: 800px;
+    position: relative;
+    top: 52px;
+    background-color: #52D5CC;
+    border: 1px solid #4CCFC5;
+    border-right: 1px solid #4CCFC5;
+}
+
+    .homebody_chat {
+      top: 52px;
+      /*left: 50px;*/
+      position: relative;
+      width: 607px;
+      padding:15px;
+      height:800px;
+    }
+    .sidebar{
+      height: 800px;
+      width: 425px;
+      position: relative;
+      top: 52px;
+      left: 75px;
+      background-color: #52D5CC;
+      border: 1px solid #4CCFC5;
+    }
+
+@media screen and (min-width: 990px) {
+  .sidetab{
     left: 0;
     float: left;
     width: 75px;
@@ -12,27 +42,6 @@
     border: 1px solid #4CCFC5;
     border-right: 1px solid #4CCFC5;
 }
-
-    .homebody_chat {
-      top: 52px;
-      /*left: 50px;*/
-      position: relative;
-      width: 607px;
-      z-index: 1;
-      padding:15px;
-    }
-    .sidebar{
-      height: 100%;
-      width: 425px;
-      position: relative;
-      top: 52px;
-      left: 75px;
-      background-color: #52D5CC;
-      overflow-x: hidden;
-      border: 1px solid #4CCFC5;
-    }
-
-@media screen and (min-width: 990px) {
     .homebody_chat {
       top: 52px;
       /*left: 50px;*/
