--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -1,6 +1,6 @@
 
 <head>
-	<div class="row" style="padding-left: 20px;">
+	<div class="row" id="profile_workmap">
 		<aside style="padding-left: 12px;">
 			<img class="img-rounded" alt="profile" src="<%=current_user.image%>" width="100px" height="100px" style="float: left; margin-right: 8px; margin-top: 5px;">
 		</aside>
