--- a/app/assets/stylesheets/html_erb_task.css
+++ b/app/assets/stylesheets/html_erb_task.css
@@ -1,13 +1,22 @@
+
+
+#profile_workmap{
+  padding-left: 20px;
+  position: relative;
+  top: 52px;
+}
+.homebody_task{
+    width: 82%;
+    position: relative;
+    top: 52px;
+}
 /*** Sidebar ***/
 
-.homebody_task{
-	width: 82%;
-}
 .sidebar_task{
     height: 100%;
     width: 18%;
     max-width: 250px;
-    position: absolute;
+    position: fixed;
     z-index: 1;
     top: 51px;
     right: 0;
@@ -16,21 +25,21 @@
     margin-left: 3px;
 }
 #task_pararell{
-	margin-top: 20px;
+    margin-top: 20px;
 }
 #task_taskdue{
-	padding-top: 6px;
+    padding-top: 6px;
 }
 #task_name{
-	padding-top: 3px;
+    padding-top: 3px;
 }
 #sidebar_name{
-	padding-top: 8px;
-	color: white;
+    padding-top: 8px;
+    color: white;
 }
 #sidebar_status{
-	padding-top: 8px;
-	color: white;
+    padding-top: 8px;
+    color: white;
 }
 
 /*** Individual Modal ***/
